infra/k8s/kubefed/stage-1/webhook.yaml
---
# Source: kubefed/charts/controllermanager/templates/webhook.yaml
# The same comments for ValidatingWebhookConfiguration apply here to
# MutatingWebhookConfiguration.
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutation.core.kubefed.io

webhooks:
- name: kubefedconfigs.core.kubefed.io
  clientConfig:
    service:
      namespace: "kube-federation-system"
      name: kubefed-admission-webhook
      path: /apis/mutation.core.kubefed.io/v1beta1/kubefedconfigs
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lRYVBPWndSbWg1d0VuMVNaRzhVWG8rVEFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEU1TVRJdwpOekUxTkRNMU5sb1hEVEk1TVRJd05ERTFORE0xTmxvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU9lK1NGYnNKMTNidzFkelhyN29JRktob29xamhOT2F5anVoTi9WQ1lGazRtNVE3NWExdzVVTWRmY3RITHN1Ygp3QytMNEUzWFdIM [...]
  rules:
  - operations:
    - CREATE
    apiGroups:
    - core.kubefed.io
    apiVersions:
    - v1beta1
    resources:
    - kubefedconfigs
  failurePolicy: Fail
---
# Source: kubefed/charts/controllermanager/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
# For namespace scoped deployments, create a unique cluster-scoped resource
# using the namespace.
  name: validations.core.kubefed.io

webhooks:
- name: federatedtypeconfigs.core.kubefed.io
  clientConfig:
    service:
      namespace: "kube-federation-system"
      name: kubefed-admission-webhook
      path: /apis/validation.core.kubefed.io/v1beta1/federatedtypeconfigs
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lRYVBPWndSbWg1d0VuMVNaRzhVWG8rVEFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEU1TVRJdwpOekUxTkRNMU5sb1hEVEk1TVRJd05ERTFORE0xTmxvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU9lK1NGYnNKMTNidzFkelhyN29JRktob29xamhOT2F5anVoTi9WQ1lGazRtNVE3NWExdzVVTWRmY3RITHN1Ygp3QytMNEUzWFdIM [...]
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - core.kubefed.io
    apiVersions:
    - v1beta1
    resources:
    - federatedtypeconfigs
    - federatedtypeconfigs/status
  failurePolicy: Fail
- name: kubefedclusters.core.kubefed.io
  clientConfig:
    service:
      namespace: "kube-federation-system"
      name: kubefed-admission-webhook
      path: /apis/validation.core.kubefed.io/v1beta1/kubefedclusters
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lRYVBPWndSbWg1d0VuMVNaRzhVWG8rVEFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEU1TVRJdwpOekUxTkRNMU5sb1hEVEk1TVRJd05ERTFORE0xTmxvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU9lK1NGYnNKMTNidzFkelhyN29JRktob29xamhOT2F5anVoTi9WQ1lGazRtNVE3NWExdzVVTWRmY3RITHN1Ygp3QytMNEUzWFdIM [...]
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - core.kubefed.io
    apiVersions:
    - v1beta1
    resources:
    - kubefedclusters
    - kubefedclusters/status
  failurePolicy: Fail
- name: kubefedconfigs.core.kubefed.io
  clientConfig:
    service:
      namespace: "kube-federation-system"
      name: kubefed-admission-webhook
      path: /apis/validation.core.kubefed.io/v1beta1/kubefedconfigs
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURHakNDQWdLZ0F3SUJBZ0lRYVBPWndSbWg1d0VuMVNaRzhVWG8rVEFOQmdrcWhraUc5dzBCQVFzRkFEQW4KTVNVd0l3WURWUVFERXh4cmRXSmxabVZrTFdGa2JXbHpjMmx2YmkxM1pXSm9iMjlyTFdOaE1CNFhEVEU1TVRJdwpOekUxTkRNMU5sb1hEVEk1TVRJd05ERTFORE0xTmxvd0p6RWxNQ01HQTFVRUF4TWNhM1ZpWldabFpDMWhaRzFwCmMzTnBiMjR0ZDJWaWFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU9lK1NGYnNKMTNidzFkelhyN29JRktob29xamhOT2F5anVoTi9WQ1lGazRtNVE3NWExdzVVTWRmY3RITHN1Ygp3QytMNEUzWFdIM [...]
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - core.kubefed.io
    apiVersions:
    - v1beta1
    resources:
    - kubefedconfigs
  failurePolicy: Fail
